--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-draggable": "^3.0.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-undo": "^0.6.1"
